tests/fixtures/invalid/pow_set_bool_bool.py
# Cannot call pow() with Set[int], Bool, Bool
x = pow({1, 2, 3}, True, True)
